# Template-Metaprogramming-Tic-Tac-Toe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_main.sh  compile_tests.sh  test
src/: CMakeLists.txt  main.cpp  systemtests.cpp  test.cpp  tictactoe.cpp  tictactoe.hpp
